@startuml

title __HELPER's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace view {
        namespace gui {
          namespace viewcontrollers {
            namespace helper {
              class it.polimi.ingsw.client.view.gui.viewcontrollers.helper.GodInfoLabel {
                  + GodInfoLabel()
              }
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace view {
        namespace gui {
          namespace viewcontrollers {
            namespace helper {
              class it.polimi.ingsw.client.view.gui.viewcontrollers.helper.GodPane {
                  - parameter : String
                  + GodPane()
              }
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace view {
        namespace gui {
          namespace viewcontrollers {
            namespace helper {
              class it.polimi.ingsw.client.view.gui.viewcontrollers.helper.PlayerBox {
                  + PlayerBox()
              }
            }
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.client.view.gui.viewcontrollers.helper.GodInfoLabel -up-|> javafx.scene.layout.AnchorPane
  it.polimi.ingsw.client.view.gui.viewcontrollers.helper.GodPane -up-|> javafx.scene.layout.AnchorPane
  it.polimi.ingsw.client.view.gui.viewcontrollers.helper.GodPane o-- it.polimi.ingsw.client.view.gui.ParameterListener : parameterListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
